--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1468,7 +1468,7 @@
 	}
 
 	p {
-		margin: 0 0 2em 0;
+		margin: 0 0 1em 0;
 	}
 
 	h1, h2, h3, h4, h5, h6 {
@@ -1476,7 +1476,7 @@
 		font-weight: 800;
 		letter-spacing: 0.225em;
 		line-height: 1em;
-		margin: 0 0 1em 0;
+		margin: 0 0 .5em 0;
 		text-transform: uppercase;
 	}
 
@@ -1614,6 +1614,12 @@
 	header h6 + p {
 		font-size: 0.9em;
 	}
+	
+	div.content-border {
+		width: 11em;
+		margin: 0 0 10px 5em;
+		border-top: 2px solid;
+	}
 
 	header.major {
 		margin: 0 0 3.5em 0;
@@ -1626,7 +1632,7 @@
 			position: relative;
 		}
 
-			header.major h2:after, header.major h3:after, header.major h4:after, header.major h5:after, header.major h6:after {
+			header.major h2:after, header.major h3:after, header.major h4:after, header.major h5:after, header.major h6:after, div.content-style2 div:after {
 				content: '';
 				display: block;
 				height: 1px;
@@ -2513,9 +2519,9 @@
 				border-radius: 0;
 				width: 100%;
 			}
-
+		
 		.spotlight .content {
-			padding: 2em 4em 0.1em 4em ;
+			padding: 2em 4em 0.1em 4em;
 			-moz-order: 2;
 			-webkit-order: 2;
 			-ms-order: 2;
@@ -2523,6 +2529,15 @@
 			max-width: 48em;
 			width: 60%;
 		}
+		
+		.spotlight .content-style2 {
+			width: 100%;
+			padding: 1em 34em 0.1em 17em;
+		}
+		
+			.spotlight .content-style2 p {
+				text-align-last: end;
+			}
 
 		.spotlight:nth-child(2n) {
 			-moz-flex-direction: row-reverse;
