--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1616,8 +1616,8 @@
 	}
 	
 	div.content-border {
-		width: 11em;
-		margin: 0 0 10px 5em;
+		width: 9em;
+		margin: 0 0 10px 0;
 		border-top: 2px solid;
 	}
 
@@ -2530,14 +2530,18 @@
 			width: 60%;
 		}
 		
-		.spotlight .content-style2 {
-			width: 100%;
-			padding: 1em 34em 0.1em 17em;
+		.spotlight .content-style1 {
+			height: 5em;
+			width: 45%;
+			background-color: #21b2a6;
 		}
 		
-			.spotlight .content-style2 p {
-				text-align-last: end;
-			}
+		.spotlight .content-style2 {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			padding: .5em 0 .5em 4em;
+		}
 
 		.spotlight:nth-child(2n) {
 			-moz-flex-direction: row-reverse;
@@ -2595,6 +2599,15 @@
 			.spotlight .content {
 				width: 55%;
 			}
+			
+			.spotlight .content-style1 {
+				display: none;
+			}
+			
+			.spotlight .content-style2 {
+				width: 100%;
+				padding-left: 0;
+			}
 
 		}
 
@@ -2617,6 +2630,10 @@
 					max-width: none;
 					text-align: center;
 					width: 100%;
+				}
+				
+				.spotlight .content-style1 {
+					display: none;
 				}
 
 		}
