--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2518,6 +2518,11 @@
 			.spotlight .image img {
 				border-radius: 0;
 				width: 100%;
+				opacity: .6;
+			}
+			
+			.spotlight .image img:hover {
+				opacity: 1;
 			}
 		
 		.spotlight .content {
@@ -2532,7 +2537,7 @@
 		
 		.spotlight .content-style1 {
 			height: 5em;
-			width: 45%;
+			width: 40%;
 			background-color: #21b2a6;
 		}
 		
