--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2390,7 +2390,7 @@
 	}
 
 		.features li {
-			padding: 4em 4em 2em 6em ;
+			padding: 2em 3em 2em 3em ;
 			display: block;
 			position: relative;
 			text-align: left;
@@ -2449,9 +2449,41 @@
 			.features li:nth-child(1) {
 				border-top-left-radius: 3px;
 			}
+			
+			.features li:nth-child(1):before {
+				display: none;
+			}
+			
+			.features li:nth-child(1) div {
+				padding: 164px 0;
+			}
 
 			.features li:nth-child(2) {
 				border-top-right-radius: 3px;
+				padding: 6em 0;
+			}
+			
+			.features li:nth-child(2):before {
+				display: none;
+			}
+			
+			.features li:nth-child(2) img {
+				max-width: 100%;
+				height: auto;
+		    transform: rotate(90deg)
+			}
+			
+			.features li:nth-child(3):before {
+				display: none;
+			}
+			
+			.features li:nth-child(3) img {
+				max-width: 100%;
+				height: auto;
+			}
+				
+			.features li:nth-child(4) div{
+				padding: 3.4em 0;
 			}
 
 			.features li:nth-last-child(1) {
@@ -2465,7 +2497,7 @@
 			@media screen and (max-width: 980px) {
 
 				.features li {
-					padding: 3em 2em 1em 2em ;
+					padding: 1em 2em 1em 2em ;
 					text-align: center;
 				}
 
@@ -2475,19 +2507,36 @@
 						position: relative;
 						top: 0;
 					}
+				
+					.features li:nth-child(1) div {
+						padding: 13em 0;
+					}
+					
+					.features li:nth-child(2) {
+						padding: 12em 0;
+					}
+					
+					.features li:nth-child(3) {
+						padding: 5.6em 2em;
+					}
+					
+					.features li:nth-child(4) div {
+						padding: 5.5em 0;
+					}
 
 			}
 
 			@media screen and (max-width: 736px) {
 
 				.features li {
-					padding: 3em 0 1em 0 ;
+					padding: 2em 0;
 					background-color: transparent !important;
 					border-top: solid 2px #fff;
 					width: 100%;
 				}
 
 					.features li:first-child {
+						max-height: 30em;
 						border-top: 0;
 					}
 
@@ -2542,10 +2591,10 @@
 		}
 		
 		.spotlight .content-style2 {
+			width: 20%;
 			display: flex;
 			flex-direction: column;
 			align-items: center;
-			padding: .5em 0 .5em 4em;
 		}
 
 		.spotlight:nth-child(2n) {
@@ -3621,6 +3670,7 @@
 		display: -webkit-flex;
 		display: -ms-flex;
 		display: flex;
+		align-items: flex-end;
 		max-width: 45em;
 	}
 
@@ -3643,7 +3693,12 @@
 			-ms-order: 2;
 			order: 2;
 			width: 30%;
+			margin: auto 0;
 		}
+		
+			/* #cta .inner .actions ul {
+				margin-bottom: 1em;
+			} */
 
 		@media screen and (max-width: 980px) {
 
@@ -3755,10 +3810,12 @@
 	}
 
 		#footer .icons {
-			font-size: 1.25em;
+			font-size: 3em;
+			margin-bottom: .5em;
 		}
 
 			#footer .icons a {
+				margin: 0 .25em;
 				color: rgba(255, 255, 255, 0.5);
 			}
 
@@ -3773,6 +3830,11 @@
 			list-style: none;
 			padding: 0;
 			text-transform: uppercase;
+		}
+		
+		#footer .svg-inline--fa {
+			padding: 0;
+			vertical-align: 0;
 		}
 
 			#footer .copyright li {
