--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1476,7 +1476,7 @@
 		font-weight: 800;
 		letter-spacing: 0.225em;
 		line-height: 1em;
-		margin: 0 0 .5em 0;
+		margin: .1em 0 .5em 0;
 		text-transform: uppercase;
 	}
 
@@ -2535,9 +2535,30 @@
 					width: 100%;
 				}
 
-					.features li:first-child {
+					.features li:nth-child(1) {
 						max-height: 30em;
 						border-top: 0;
+						order: 1
+					}
+					
+					.features li:nth-child(2) {
+						order: 2
+					}
+					
+					.features li:nth-child(3) {
+						order: 4
+					}
+					
+					.features li:nth-child(4) {
+						order: 3
+					}
+					
+					.features li:nth-child(5) {
+						order: 5
+					}
+					
+					.features li:nth-child(6) {
+						order: 6
 					}
 
 			}
@@ -3810,6 +3831,8 @@
 	}
 
 		#footer .icons {
+			display: flex;
+			justify-content: center;
 			font-size: 3em;
 			margin-bottom: .5em;
 		}
