--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2617,6 +2617,22 @@
 			flex-direction: column;
 			align-items: center;
 		}
+		
+		.project-link-wrapper {
+			width: fit-content;
+			padding-top: 1em;
+			padding-bottom: .5em;
+		}
+		
+			.project-link-wrapper .icon {
+				list-style: none;
+				color: rgba(255, 255, 255, 0.5);
+				font-size: 2em;
+			}
+		
+			.project-link-wrapper .icon:hover {
+				color: #fff;
+			}
 
 		.spotlight:nth-child(2n) {
 			-moz-flex-direction: row-reverse;
@@ -2682,6 +2698,10 @@
 			.spotlight .content-style2 {
 				width: 100%;
 				padding-left: 0;
+			}
+			
+			.project-link-wrapper {
+				margin: 0 auto;
 			}
 
 		}
